--- a/djangoproject_tutorial/mysite/polls/templates/polls/index.html
+++ b/djangoproject_tutorial/mysite/polls/templates/polls/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
+        {% load static %}
+        <link rel="stylesheet" href="{% static 'polls/style.css' %}"
         <meta charset="utf-8" />
         <title>My test page</title>
     </head>
